--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
-    "babel-preset-react": "^6.24.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1"
   },
