update buildspec.yml to include install phase

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,9 @@ phases:
     commands:
       - npm install
       - npm test
+  install:
+      runtime-versions:
+          - nodejs: 10
   build:
       commands:
           - npm run webpack
