--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      - nodejs: 6.9
+        nodejs: 6.9
   pre_build:
     commands:
       - npm install
