added secondary artifact to buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-        nodejs: 10 
+        nodejs: 10
   pre_build:
     commands:
       - npm install
@@ -18,3 +18,7 @@ artifacts:
     - styles/main.css
     - images/*
     - dist/bundle.js
+  secondary-artifacts:
+    artifactIdentifier:
+      name: andrewparkportfolioCodePipeline
+      discard-paths: yes
